[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pulumi-aws-modules"
version = "0.1.0"
description = "Reusable Pulumi AWS primitive modules for Onii infrastructure."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pulumi>=3.0.0,<4.0.0",
  "pulumi-aws>=6.0.0,<7.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
